# mtbotter

./: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake
src/: clientiface.h  cmake_config.h  hud.h  irrlichttypes.h  irrlichttypes_extrabloated.h  mtbotter.h  nodedef.h  test_config.h
src/client/: .client.h.swp  camera.h  client.h  clientenvironment.h  hud.h  irr_aabb3d.h  itemdef.h  mapblock_mesh.h  metadata.h  particles.h  tile.h
src/client/network/util/: irrlichttypes_bloated.h
src/client/util/: irr_v2d.h  irrlichttypes.h  irrlichttypes_bloated.h  numeric.h  string.h
src/gui/: irr_aabb3d.h  irr_v2d.h  irr_v3d.h  modalMenu.h
src/network/: networkpacket.h  numeric.h
src/util/: irr_v3d.h  irrlichttypes_extrabloated.h  metricsbackend.h  porting.h
src/util/threading/util/: basic_macros.h
test/: command-to-run
